# biblatex-rust

./: Cargo.toml  ISSUES.md  README.md  SPEC.md  biblatex_comprehensive_test.bib  comprehensive_test.bib  sonar-project.properties
.github/issues/: 2023-05-03.32.issue.open.md  2024-03-05.51.issue.open.md  2024-10-06.62.issue.open.md  2024-10-13.63.issue.open.md  2025-05-05.76.issue.open.md  2025-06-03.83.issue.open.md  2025-07-02.85.issue.open.md  2025-07-05.87.issue.open.md  2025-12-21.92.issue.open.md  2026-01-05.94.issue.open.md  2026-01-15.95.issue.open.md  Improve error messages.md  No `Entry set_editor()` function.md  Support for access time in bibliography.md  and others in name lists.md  fix to string methods.md  poor error message, failed ot parse biblatex missing number.md
.github/workflows/: ci.yaml  ci.yml
bench/: Cargo.toml
benches/: biblatex.rs
examples/: biblatex.rs  comprehensive.rs  issue_94_demo.rs  non_standard_types.rs  official_example.rs
scripts/: biblatex-gen.py  biblatex-generator.py
src/: chunk.rs  lib.rs  mechanics.rs  raw.rs  resolve.rs  types.rs
src/types/: date.rs  lang.rs  person.rs
tests/: comprehensive_test.rs  invalid_fixtures.rs  issue_94_test.rs  non_standard_types_test.rs  official_example_test.rs  roundtrip_test.rs  urldate_with_time_example_test.rs  valid_fixtures.rs
tests/fixtures/valid/: at_sign_fields.bib  circular_crossref.bib  example.bib  external_abbreviations.bib  non_standard_types.bib  self_referential.bib  string_multi_syntax.bib  urldate_with_time.bib
