[package]
name = "biblatex"
version = "0.11.0"
authors = ["Martin Haug <mhaug@live.de>"]
license = "MIT OR Apache-2.0"
description = "Parsing, writing, and evaluating BibTeX and BibLaTeX files"
repository = "https://github.com/typst/biblatex"
readme = "README.md"
categories = ["database", "parser-implementations", "text-processing"]
keywords = ["biber", "biblatex", "bibliography", "bibtex", "latex"]
edition = "2021"

[workspace]
members = ["bench"]

[dependencies]
paste = { package = "pastey", version = "0.2.1" }
roman-numerals-rs = "3.1.0"
serde = { version = "1", features = ["derive"], optional = true }
strum = { version = "0.27", features = ["derive"] }
unic-langid = { version = "0.9.6", features = ["macros"], optional = true }
unicode-normalization = "0.1"
unscanny = "0.1"

[features]
serde = ["dep:serde"]
unic-langid = ["dep:unic-langid"]
