[package]
name = "biblatex"
version = "0.11.0+spec-3.21"
edition = "2024"
description = "Parsing, writing, and evaluating BibTeX and BibLaTeX files"
readme = "README.md"
repository = "https://github.com/jassielof/biblatex"
license = "MIT OR Apache-2.0"
keywords = ["biber", "biblatex", "bibliography", "bibtex", "latex"]
categories = ["database", "parser-implementations", "text-processing"]

[workspace]
members = ["bench"]

[dependencies]
paste = { package = "pastey", version = "0.2.1" }
roman-numerals-rs = "4.1.0"
serde = { version = "1", features = ["derive"], optional = true }
strum = { version = "0.27", features = ["derive"] }
unic-langid = { version = "0.9.6", features = ["macros"], optional = true }
unicode-normalization = "0.1"
unscanny = "0.1"

[features]
serde = ["dep:serde"]
unic-langid = ["dep:unic-langid"]
